# lynx-portfolio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  lynx-portfolio  lynx-portfolio.py  lynx.py  pyproject.toml  requirements.txt
docs/: README.html  README.md  api-reference.html  api-reference.md  architecture.html  architecture.md  build_html.py  testing.html  testing.md  user-guide.html  user-guide.md
examples/: portfolio.json
img/: logo_ascii.txt
lynx/: __init__.py  api.py  cache.py  cli.py  config.py  database.py  display.py  fetcher.py  forex.py  gui.py  interactive.py  operations.py  tui.py  vault.py  wizard.py
lynx_portfolio/: __init__.py  __main__.py  api.py  backup.py  broker_import.py  cache.py  cli.py  config.py  dashboard.py  database.py  display.py  egg.py  forex.py  gui.py  interactive.py  logo.py  operations.py  plugin.py  price_alerts.py  transactions.py  tui.py  validation.py  vault.py  watchlists.py  wizard.py
lynx_portfolio/web/: __init__.py  app.css  app.js  index.html
tests/: test_api_security.py  test_dashboard.py  test_default_mode.py  test_forex_multi_currency.py  test_transactions.py  test_tui_smoke.py  test_validation.py  test_vault.py  test_watchlists_and_alerts.py  test_web_ui.py
tests/robot/: api_tests.robot  cli_tests.robot  default_mode_tests.robot  vault_tests.robot
tests/robot/resources/: common.robot
