[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "lynx-portfolio"
version         = "0.2"
description     = "Investment portfolio tracker with Yahoo Finance integration"
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "MIT" }
dependencies    = [
    "yfinance>=0.2.36",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "textual>=1.0.0",
    "flask>=3.0.0",
]

[project.scripts]
lynx = "lynx.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["lynx*"]
