[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "lynx-portfolio"
version = "5.4"
description     = "Investment portfolio tracker with Yahoo Finance integration"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "BSD-3-Clause" }
authors         = [{ name = "Borja Tarraso", email = "borja.tarraso@member.fsf.org" }]
keywords        = ["finance", "investing", "portfolio", "tracker"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies    = [
    "lynx-investor-core>=5.4",
    "yfinance>=0.2.36",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "textual>=1.0.0",
    "flask>=3.0.0",
    "cryptography>=41.0.0",
    "argcomplete>=3.0",
]

[project.urls]
Homepage   = "https://github.com/borjatarraso/lynx-portfolio"
Repository = "https://github.com/borjatarraso/lynx-portfolio"
Issues     = "https://github.com/borjatarraso/lynx-portfolio/issues"
Changelog  = "https://github.com/borjatarraso/lynx-portfolio/blob/main/CHANGELOG.md"

[project.scripts]
lynx-portfolio = "lynx_portfolio.__main__:main"

[project.entry-points."lynx_investor_suite.agents"]
portfolio = "lynx_portfolio.plugin:register"

[tool.setuptools.packages.find]
where = ["."]
include = ["lynx_portfolio*"]

[tool.setuptools.package-data]
"lynx_portfolio.web" = ["*.html", "*.css", "*.js"]
